[gd_scene load_steps=5 format=3 uid="uid://3k3dukisluyn"]

[ext_resource type="Texture2D" uid="uid://cupclxlgjwjmg" path="res://Assets/Icons/trash_icon.png" id="2_du61s"]
[ext_resource type="Texture2D" uid="uid://dm2u0xqmmcorj" path="res://Assets/Icons/copy.png" id="3_6pvm8"]
[ext_resource type="Script" path="res://Scripts/GraphNodes/OptionNode.gd" id="4_5yoga"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_803ep"]
draw_center = false
border_width_bottom = 2
border_color = Color(0.0862745, 0.101961, 0.12549, 1)
expand_margin_bottom = 5.0

[node name="OptionNode" type="PanelContainer"]
offset_right = 349.0
offset_bottom = 165.0
size_flags_vertical = 0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_803ep")
script = ExtResource("4_5yoga")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="SentenceContainer" type="HBoxContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MainContainer/SentenceContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Option"

[node name="TextEdit" type="TextEdit" parent="MarginContainer/MainContainer/SentenceContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 3
wrap_mode = 1

[node name="DeleteBtnContainer" type="MarginContainer" parent="MarginContainer/MainContainer/SentenceContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5

[node name="Delete" type="TextureButton" parent="MarginContainer/MainContainer/SentenceContainer/DeleteBtnContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_du61s")
stretch_mode = 3

[node name="EnableBtn" type="CheckBox" parent="MarginContainer/MainContainer"]
layout_mode = 2
button_pressed = true
text = "Enable by default"

[node name="OneShotBtn" type="CheckBox" parent="MarginContainer/MainContainer"]
layout_mode = 2
text = "One Shot"

[node name="IDContainer" type="HBoxContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2

[node name="IDLineEdit" type="LineEdit" parent="MarginContainer/MainContainer/IDContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
placeholder_text = "id"

[node name="CopyContainer" type="MarginContainer" parent="MarginContainer/MainContainer/IDContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 5

[node name="CopyBtn" type="TextureButton" parent="MarginContainer/MainContainer/IDContainer/CopyContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_6pvm8")
stretch_mode = 3

[connection signal="text_changed" from="MarginContainer/MainContainer/SentenceContainer/TextEdit" to="." method="update_ref"]
[connection signal="pressed" from="MarginContainer/MainContainer/SentenceContainer/DeleteBtnContainer/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/EnableBtn" to="." method="update_ref"]
[connection signal="pressed" from="MarginContainer/MainContainer/OneShotBtn" to="." method="update_ref"]
[connection signal="focus_exited" from="MarginContainer/MainContainer/IDContainer/IDLineEdit" to="." method="_on_id_focus_exited"]
[connection signal="text_submitted" from="MarginContainer/MainContainer/IDContainer/IDLineEdit" to="." method="_on_id_text_submitted"]
[connection signal="pressed" from="MarginContainer/MainContainer/IDContainer/CopyContainer/CopyBtn" to="." method="_on_id_copy_pressed"]
